<resources>
    <string name="app_name">Alias</string>
    <string name="alias_main">alias</string>
    <string name="rules_info_text">Get to know Alias</string>
    <string name="rules_text">Rules</string>
    <string name="new_game_info_text">For the victory</string>
    <string name="new_game_text">New Game</string>
    <string name="continue_game_text">Continue</string>
    <string name="last_game_time_info">Last game</string>
    <string name="last_game_minutes">minutes ago</string>
    <string name="settings">Settings</string>
    <string name="settings_points_info_text">For the victory</string>
    <string name="settings_points_text">Points</string>
    <string name="points_for_victory">100</string>
    <string name="words_number_text">Number of Words</string>
    <string name="words_number_info_text">Per round</string>
    <string name="words_number_counter">45</string>
    <string name="rounds_text">Rounds</string>
    <string name="rounds_info_text">Total</string>
    <string name="rounds_number">5</string>
    <string name="round_time_text">Round Time</string>
    <string name="round_time_info_text">Seconds per round</string>
    <string name="missed_word_penalty_text">Missed Word Penalty</string>
    <string name="missed_word_penalty_info_text">Point lost for a missed word</string>
    <string name="common_final_word_text">Common Final Word</string>
    <string name="common_final_word_info_text">All teams guess the final word</string>
    <string name="final_word_text">Final Word</string>
    <string name="final_word_info_text">Points worth</string>
    <string name="teams_names_title">Name the teams</string>
    <string name="play_word">Play</string>
    <string name="plus_sign">+</string>
    <string name="team_no_title">TEAM No</string>
    <string name="team_name_hint">Team name</string>
    <string name="get_ready_text">Get Ready</string>
    <string name="start_text">Start</string>


    <string-array name="teams_names">
        <item>Scorpions</item>
        <item>Raptors</item>
        <item>Tigers</item>
        <item>Stars</item>
        <item>Rangers</item>
        <item>Trojans</item>
        <item>Warriors</item>
        <item>Vikings</item>
        <item>Predators</item>
        <item>Bulls</item>
        <item>Amigos</item>
        <item>Hustlers</item>
        <item>Lizards</item>
        <item>Magicians</item>
        <item>Mavericks</item>
        <item>Phoenix</item>
        <item>Mad Dogs</item>
        <item>Chaos</item>
        <item>Enigma</item>
    </string-array>

    <string-array name="words">
        <item>Scorpions</item>
        <item>Raptors</item>
        <item>Tigers</item>
        <item>Stars</item>
        <item>Rangers</item>
        <item>Trojans</item>
        <item>Warriors</item>
        <item>Vikings</item>
        <item>Predators</item>
        <item>Bulls</item>
        <item>Amigos</item>
        <item>Hustlers</item>
        <item>Lizards</item>
        <item>Magicians</item>
        <item>Mavericks</item>
        <item>Phoenix</item>
        <item>Mad Dogs</item>
        <item>Chaos</item>
        <item>Enigma</item>
    </string-array>
</resources>
