<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp">

        <Button
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:drawableStart="@drawable/ion_android_arrow_back_ionicons"
            android:paddingEnd="@dimen/margin_base"
            android:paddingStart="@dimen/margin_base"
            android:src="@drawable/ion_android_arrow_back_ionicons" />

        <Button
            android:id="@+id/teams_settings_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="?attr/selectableItemBackground"
            android:drawableEnd="@drawable/ion_android_settings_ionicons"
            android:paddingEnd="@dimen/margin_base"
            android:paddingStart="@dimen/margin_base" />
    </RelativeLayout>

    <TextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_layout"
        android:layout_marginStart="@dimen/margin_base"
        android:fontFamily="@font/avenir_bold"
        android:text="@string/teams_names_title"
        android:textColor="@color/black_in_game"
        android:textSize="30sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/teams_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_text"
        android:layout_above="@id/add_team_btn"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="@dimen/margin_base"
        android:layout_marginStart="@dimen/margin_base"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/add_team_btn"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_above="@id/play_btn"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_base"
        android:background="@drawable/circle_red_background"
        android:fontFamily="@font/avenir_medium"
        android:text="@string/plus_sign"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/play_btn"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_base"
        android:layout_marginEnd="@dimen/margin_base"
        android:layout_marginStart="@dimen/margin_base"
        android:background="@drawable/rounded_red_background_4dp"
        android:fontFamily="@font/avenir_bold"
        android:text="@string/play_word"
        android:textColor="@android:color/white"
        android:textSize="16sp" />
</RelativeLayout>